# python-data-driven-decisions

./: .gitignore  Data extraction.ipynb  Data-integration.ipynb  FAO attempt.ipynb  GDP v2.ipynb  README.md  Tasks register report  Untitled-1.ipynb  pyproject.toml
