[tool.poetry]
name = "python-data-driven"
version = "0.1.0"
description = ""
authors = ["Alberto <alberto.march-ventura-external@capgemini.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"